Rework life sapping to function in a more predictable manner. (more like the crystal heart). Fixes #553