@@ -1,8 +1,8 @@
 package com.minelittlepony.unicopia.ability.magic.spell.effect;
 
+import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import org.jetbrains.annotations.Nullable;
@@ -12,6 +12,9 @@ import com.minelittlepony.unicopia.Race;
 import com.minelittlepony.unicopia.ability.magic.Caster;
 import com.minelittlepony.unicopia.ability.magic.spell.AbstractAreaEffectSpell;
 import com.minelittlepony.unicopia.ability.magic.spell.Situation;
+import com.minelittlepony.unicopia.ability.magic.spell.attribute.SpellAttribute;
+import com.minelittlepony.unicopia.ability.magic.spell.attribute.SpellAttributeType;
+import com.minelittlepony.unicopia.ability.magic.spell.attribute.TooltipFactory;
 import com.minelittlepony.unicopia.ability.magic.spell.trait.Trait;
 import com.minelittlepony.unicopia.entity.damage.UDamageTypes;
 import com.minelittlepony.unicopia.entity.player.Pony;
@@ -26,6 +29,7 @@ import com.minelittlepony.unicopia.util.shape.Sphere;
 import net.minecraft.entity.Entity;
 import net.minecraft.entity.LivingEntity;
 import net.minecraft.entity.damage.DamageSource;
+import net.minecraft.entity.mob.HostileEntity;
 import net.minecraft.entity.player.PlayerEntity;
 import net.minecraft.nbt.NbtCompound;
 import net.minecraft.particle.ParticleTypes;
@@ -38,10 +42,15 @@ import net.minecraft.util.math.Vec3d;
  * A spell that pulls health from other entities and delivers it to the caster.
  */
 public class SiphoningSpell extends AbstractAreaEffectSpell {
+    static final int ANGER_TICKS = 100;
+    static final int PASSIVE_TICKS = -20;
     static final Predicate<Entity> TARGET_PREDICATE = EntityPredicates.EXCEPT_CREATIVE_OR_SPECTATOR.and(EntityPredicates.VALID_LIVING_ENTITY);
 
+    static final SpellAttribute<Boolean> INVERTED = SpellAttribute.createConditional(SpellAttributeType.INVERTED, Trait.DARKNESS, darkness -> darkness > 0);
+    static final TooltipFactory TOOLTIP = TooltipFactory.of(RANGE, INVERTED);
+
     private final DataTracker.Entry<Boolean> upset = dataTracker.startTracking(TrackableDataType.BOOLEAN, false);
-    private int ticksUpset;
+    private int ticksUpset = PASSIVE_TICKS;
 
     protected SiphoningSpell(CustomisedSpellType<?> type) {
         super(type);
@@ -49,30 +58,32 @@ public class SiphoningSpell extends AbstractAreaEffectSpell {
 
     @Override
     public Affinity getAffinity() {
-        return getTraits().get(Trait.DARKNESS) > 0 ? Affinity.BAD : Affinity.GOOD;
+        return INVERTED.get(getTraits()) ? Affinity.BAD : Affinity.GOOD;
     }
 
     @Override
     public boolean tick(Caster<?> source, Situation situation) {
-
-        if (ticksUpset > 0 && --ticksUpset <= 0) {
-            upset.set(false);
-        }
 
         if (source.isClient()) {
             float radius = source.getLevel().getScaled(5) + RANGE.get(getTraits());
             int direction = isFriendlyTogether(source) ? 1 : -1;
 
             source.spawnParticles(new Sphere(true, radius, 1, 0, 1), 1, pos -> {
-                if (!source.asWorld().isAir(BlockPos.ofFloored(pos).down())) {
+                if (source.asWorld().isAir(BlockPos.ofFloored(pos))) {
+                    pos = pos.add(0, -1.5, 0);
 
                     double dist = pos.distanceTo(source.getOriginVector());
                     Vec3d velocity = pos.subtract(source.getOriginVector()).normalize().multiply(direction * dist);
 
-                    source.addParticle(direction == 1 && ticksUpset == 0 ? ParticleTypes.HEART : ParticleTypes.ANGRY_VILLAGER, pos, velocity);
+                    source.addParticle(direction == 1 && upset.get() ? ParticleTypes.ANGRY_VILLAGER : ParticleTypes.HEART, pos, velocity);
                 }
             });
         } else {
+            if (ticksUpset > 0 && --ticksUpset <= 0) {
+                upset.set(false);
+                ticksUpset = PASSIVE_TICKS;
+            }
+
             if (source.asWorld().getTime() % 10 != 0) {
                 return true;
             }
@@ -87,34 +98,79 @@ public class SiphoningSpell extends AbstractAreaEffectSpell {
     }
 
     private Stream<LivingEntity> getTargets(Caster<?> source) {
-        return VecHelper.findInRange(null, source.asWorld(), source.getOriginVector(), 4 + source.getLevel().getScaled(6), TARGET_PREDICATE).stream().map(e -> (LivingEntity)e);
+        return VecHelper.findInRange(null, source.asWorld(), source.getOriginVector(), RANGE.get(getTraits()) + level, TARGET_PREDICATE)
+                .stream()
+                .map(e -> (LivingEntity)e);
     }
 
+    /**
+     *
+     * Light effect:
+     *
+     * Distributes (heals) entities within the area of effect, converting the caster's mana to entity health.
+     *
+     * The spell gets angry if any entities spend too much time in its area or are max health when standing in it.
+     *
+     * @param source
+     */
     private void distributeHealth(Caster<?> source) {
+        @Nullable
+        LivingEntity owner = source.getMaster();
         DamageSource damage = source.damageOf(UDamageTypes.LIFE_DRAINING, source);
+        float[] collectedHealth = new float[1];
 
-        getTargets(source).forEach(e -> {
+        List<LivingEntity> recipients = new ArrayList<>();
+        if (owner != null) {
+            recipients.add(owner);
+        }
+
+        var targets = getTargets(source).toList();
+        targets.forEach(e -> {
             float maxHealthGain = e.getMaxHealth() - e.getHealth();
 
-            if (!source.subtractEnergyCost(0.2F)) {
+            if (!source.subtractEnergyCost(0.2F + maxHealthGain)) {
                 setDead();
             }
 
-            if (ticksUpset > 0 || maxHealthGain <= 0) {
-                if (source.asWorld().random.nextInt(3000) == 0) {
-                    setDead();
-                } else {
-                    e.damage(damage, e.getHealth() / 4);
-                    ticksUpset = 100;
-                    upset.set(true);
-                }
+            if (e instanceof HostileEntity) {
+                collectedHealth[0] += e.getHealth() / 4F;
+                e.damage(damage, e.getHealth() / 4F);
+                source.addParticle(new FollowingParticleEffect(UParticles.HEALTH_DRAIN, e, 0.2F), source.getOriginVector(), Vec3d.ZERO);
             } else {
-                e.heal((float)Math.min(source.getLevel().getScaled(e.getHealth()) / 2F, maxHealthGain * 0.6));
-                ParticleUtils.spawnParticle(e.getWorld(), new FollowingParticleEffect(UParticles.HEALTH_DRAIN, e, 0.2F), e.getPos(), Vec3d.ZERO);
+                if (ticksUpset > 0 || maxHealthGain <= 0) {
+                    if (source.asWorld().random.nextInt(3000) == 0) {
+                        setDead();
+                    } else {
+                        if (++ticksUpset >= 0) {
+                            ticksUpset = ANGER_TICKS;
+                            upset.set(true);
+                            e.damage(damage, e.getHealth() / 4);
+                        }
+                    }
+                } else {
+                    collectedHealth[0] += maxHealthGain * 0.6F + (source.getLevel().getScaled(e.getHealth()) / 2F);
+                    recipients.add(e);
+                }
             }
         });
+
+        if (owner != null) {
+            float perTargetHealth = collectedHealth[0] / recipients.size();
+            recipients.forEach(recipient -> {
+                recipient.heal(perTargetHealth);
+                source.addParticle(new FollowingParticleEffect(UParticles.HEALTH_DRAIN, recipient, 0.2F), source.getOriginVector(), Vec3d.ZERO);
+            });
+
+        }
     }
 
+    /**
+     * Dark effect:
+     *
+     * Collects health from entities in the area and sends them to the caster.
+     *
+     * @param source
+     */
     private void collectHealth(Caster<?> source) {
         @Nullable
         LivingEntity owner = source.getMaster();
@@ -124,7 +180,7 @@ public class SiphoningSpell extends AbstractAreaEffectSpell {
             return;
         }
 
-        List<LivingEntity> targets = getTargets(source).collect(Collectors.toList());
+        List<LivingEntity> targets = getTargets(source).filter(e -> !source.isOwnerOrFriend(e)).toList();
         if (targets.isEmpty()) {
             return;
         }
@@ -136,27 +192,25 @@ public class SiphoningSpell extends AbstractAreaEffectSpell {
         float healthGain = 0;
 
         for (LivingEntity e : targets) {
-            if (!e.equals(owner)) {
-                float dealt = Math.min(e.getHealth(), attackAmount);
+            float dealt = Math.min(e.getHealth(), attackAmount);
 
-                if (e instanceof PlayerEntity) {
-                    Pony player = Pony.of((PlayerEntity)e);
+            if (e instanceof PlayerEntity p) {
+                Pony player = Pony.of(p);
 
-                    Race.Composite race = player.getCompositeRace();
+                Race.Composite race = player.getCompositeRace();
 
-                    if (race.canCast()) {
-                        dealt /= 2;
-                    }
-                    if (race.canUseEarth()) {
-                        dealt *= 2;
-                    }
+                if (race.canCast()) {
+                    dealt /= 2;
                 }
-
-                e.damage(damage, dealt);
-                ParticleUtils.spawnParticles(new FollowingParticleEffect(UParticles.HEALTH_DRAIN, owner, 0.2F), e, 1);
-
-                healthGain += dealt;
+                if (race.canUseEarth()) {
+                    dealt *= 2;
+                }
             }
+
+            e.damage(damage, dealt);
+            ParticleUtils.spawnParticles(new FollowingParticleEffect(UParticles.HEALTH_DRAIN, owner, 0.2F), e, 1);
+
+            healthGain += dealt;
         }
 
         owner.heal(healthGain);
@@ -172,8 +226,6 @@ public class SiphoningSpell extends AbstractAreaEffectSpell {
     public void fromNBT(NbtCompound compound, WrapperLookup lookup) {
         super.fromNBT(compound, lookup);
         ticksUpset = compound.getInt("upset");
-        if (ticksUpset > 0) {
-            upset.set(true);
-        }
+        upset.set(ticksUpset > 0);
     }
 }
